[gd_scene format=3 uid="uid://bnqe8wgrgmr2s"]

[ext_resource type="Script" uid="uid://bkxe0rahjnod7" path="res://scripts/UI/BuildingElement.gd" id="1_as83m"]

[node name="BuildingElement" type="VBoxContainer" unique_id=223361501 node_paths=PackedStringArray("display_name_label", "count_label", "production_label", "cost_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_as83m")
display_name_label = NodePath("VBoxContainer/HBoxContainer/BuildingName")
count_label = NodePath("VBoxContainer/HBoxContainer/Count")
production_label = NodePath("VBoxContainer/ProductionContainer/BuildingProduction")
cost_label = NodePath("VBoxContainer/CostContainer/BuildingCost")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=907669417]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1544640133]
layout_mode = 2

[node name="Count" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=570025890]
layout_mode = 2
text = "0"

[node name="TimesLabel" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1256337813]
layout_mode = 2
text = "x "

[node name="BuildingName" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=2023513890]
layout_mode = 2
text = "Building Name"

[node name="ProductionContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1272796689]
layout_mode = 2

[node name="BuildingProductionLabel" type="Label" parent="VBoxContainer/ProductionContainer" unique_id=882123927]
layout_mode = 2
text = "Production:"

[node name="BuildingProduction" type="Label" parent="VBoxContainer/ProductionContainer" unique_id=1755251005]
layout_mode = 2
text = "123.45 m"

[node name="CostContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1233821435]
layout_mode = 2

[node name="BuildingCostLabel" type="Label" parent="VBoxContainer/CostContainer" unique_id=2091292271]
layout_mode = 2
text = "Cost: "

[node name="BuildingCost" type="Label" parent="VBoxContainer/CostContainer" unique_id=1557253572]
layout_mode = 2
text = "123.45 m"

[node name="Buy1Button" type="Button" parent="VBoxContainer" unique_id=664899997]
layout_mode = 2
text = "Buy 1"

[node name="Buy10Button" type="Button" parent="VBoxContainer" unique_id=950575930]
layout_mode = 2
text = "Buy 10"

[node name="Buy100Button" type="Button" parent="VBoxContainer" unique_id=966047033]
layout_mode = 2
text = "Buy 100"

[connection signal="pressed" from="VBoxContainer/Buy1Button" to="." method="handle_buy_1_click"]
[connection signal="pressed" from="VBoxContainer/Buy10Button" to="." method="handle_buy_10_click"]
[connection signal="pressed" from="VBoxContainer/Buy100Button" to="." method="handle_buy_100_click"]
